--- a/Ch03/Thymeleaf/src/main/resources/templates/customers/list.html
+++ b/Ch03/Thymeleaf/src/main/resources/templates/customers/list.html
@@ -3,8 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <title>고객 목록</title>
+    <link rel="stylesheet" type="text/css"
+          href="../../static/css/style.css"
+          th:href="@{/css/style.css}"/>
 </head>
 <body>
+<div>
+    <form th:action="@{/customers/create}" th:object="${customerForm}" method="post">
+        <dl>
+            <dt><label for="lastName">성</label></dt>
+            <dd>
+                <input type="text" id="lastName" name="lastName" th:field="*{lastName}"
+                       th:errorclass="error-input" value="한"/>
+                <span th:if="${#fields.hasErrors('lastName')}" th:errors="*{lastName}"
+                      class="error-messages">error!</span>
+            </dd>
+            <dt><label for="firstName">이름</label></dt>
+            <dd>
+                <input type="text" id="firstName" name="firstName" th:field="*{firstName}"
+                       th:errorclass="error-input" value="대영"/>
+                <span th:if="${#fields.hasErrors('firstName')}" th:errors="*{firstName}"
+                      class="error-messages">error!</span>
+            </dd>
+        </dl>
+        <input type="submit" value="작성"/>
+    </form>
+</div>
+<hr/>
 <table class="table table-striped table-bordered table-condensed">
     <tr th:each="customer : ${customers}">
         <td th:text="${customer.id}">100</td>
